--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><%= link_to 'Feeds', feeds_path %></li>
-          </ul>
+          <!-- put li's here, eg <li class="active"> <%# link_to 'Cheese', cheeses_path %></li> -->
+	  </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
